--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.21"
+    "angular": "~1.2.21",
+    "angular-animate": "~1.2.21",
+    "jquery": "~2.1.1",
+    "lodash": "~2.4.1"
   }
 }
