--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.21",
-    "angular-animate": "~1.2.21",
-    "jquery": "~2.1.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "polymer": "Polymer/polymer#~0.3.4",
+    "core-elements": "Polymer/core-elements#~0.3.4",
+    "paper-elements": "Polymer/paper-elements#~0.3.4"
   }
 }
