--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "lodash": "~2.4.1",
     "polymer": "Polymer/polymer#~0.3.4",
     "core-elements": "Polymer/core-elements#~0.3.4",
-    "paper-elements": "Polymer/paper-elements#~0.3.4"
+    "paper-elements": "Polymer/paper-elements#~0.3.4",
+    "polymer-jsonp": "PolymerLabs/polymer-jsonp#~0.3.0"
   }
 }
