--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-jade": "~0.7.0",
     "gulp-uglify": "~0.3.1",
     "del": "~0.1.1",
-    "buildbranch": "0.0.1",
-    "gulp-webserver": "~0.5.0"
+    "gulp-webserver": "~0.5.0",
+    "gulp-gh-pages": "~0.3.3"
   }
 }
