--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "gulp-uglify": "~0.3.1",
     "del": "~0.1.1",
     "gulp-webserver": "~0.5.0",
-    "gulp-gh-pages": "~0.3.3"
+    "gulp-shell": "~0.2.9"
   }
 }
