--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,9 @@
   ],
   "dependencies": {
     "lodash": "~2.4.1",
-    "polymer": "Polymer/polymer#~0.3.4",
-    "core-elements": "Polymer/core-elements#~0.3.4",
-    "paper-elements": "Polymer/paper-elements#~0.3.4",
-    "polymer-jsonp": "PolymerLabs/polymer-jsonp#~0.3.0"
+    "polymer": "Polymer/polymer#~0.4.0",
+    "core-elements": "Polymer/core-elements#~0.4.0",
+    "paper-elements": "Polymer/paper-elements#~0.4.0",
+    "polymer-rss": "~0.1.0"
   }
 }
